--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -8,14 +8,6 @@ body {
   box-sizing: border-box;
 }
 
-a {
-  color: blue;
-  text-decoration: underline;
-
-  &:hover {
-    text-decoration: none;
-  }
-}
 
 .header {
   max-width: 668px;
@@ -50,5 +42,30 @@ a {
 
   & + & {
     margin-top: 20px;
+  }
+}
+
+.flex {
+  display: flex;
+}
+
+.vertical-line {
+  width: 1px;
+  background-color: rgba(0, 0, 0, 0.1);
+  margin-left: 2px;
+  margin-right: 2px;
+}
+
+.horizontal-line {
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+@media only screen and (max-width: 768px) {
+  .content {
+    max-width: 100%;
   }
 }
